<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/navigation_profile_string"/>

    <item
        android:id="@+id/navigation_devices"
        android:icon="@drawable/devices_icon"
        android:title="@string/navigation_devices_string"
        />

    <item
        android:id="@+id/navigation_my_devices"
        android:icon="@drawable/my_devices_icon"
        android:title="@string/navigation_my_devices_string"
        />

    <item
        android:id="@+id/navigation_device_management"
        android:icon="@drawable/devices_manager_icon"
        android:title="@string/navigation_device_manager_string"
        />

</menu>