<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/layout"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/logo_company"
        android:layout_width="@dimen/width_412dp"
        android:layout_height="@dimen/width_54dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_company"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_220dp"
        android:text="@string/text_credentials"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="355dp"
        android:layout_height="23dp"
        android:layout_marginStart="@dimen/margin_start_24dp"
        android:layout_marginTop="@dimen/margin_top_292dp"
        android:layout_marginEnd="@dimen/margin_end_24dp"
        android:text="@string/edit_text_username"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/TextEditStyle"
        android:id="@+id/username_input_field"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/margin_start_24dp"
        android:layout_marginEnd="@dimen/margin_end_24dp"
        android:hint="@string/text_username"
        android:paddingStart="24dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_3SS"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="355dp"
        android:layout_height="23dp"
        android:layout_marginStart="@dimen/margin_start_24dp"
        android:layout_marginTop="@dimen/margin_top_30dp"
        android:layout_marginEnd="@dimen/margin_end_24dp"
        android:text="@string/text_password"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/username_input_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password_input_field"
        style="@style/TextEditStyle"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:layout_marginStart="@dimen/margin_start_24dp"
        android:layout_marginEnd="@dimen/margin_end_24dp"
        android:hint="@string/text_password_hint"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_3SS"
        app:layout_constraintTop_toBottomOf="@+id/text_view_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/sign_up_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_24dp"
        android:layout_marginTop="@dimen/margin_top_40dp"
        android:layout_marginEnd="@dimen/margin_end_24dp"
        android:text="@string/text_button_login"
        app:layout_constraintTop_toBottomOf="@+id/password_input_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>