<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.login.LoginFragment">

    <View
        android:id="@+id/header_background"
        style="@style/ProfileHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_background"
        android:padding="15dp"
        android:src="@drawable/profile_icon"
        app:layout_constraintBottom_toBottomOf="@+id/header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_230dp"
        android:text="@string/name_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_input_field"
        style="@style/TextEditStyle"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_3SS"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_username"
        tools:text="Dave Morgan" />

    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30dp"
        android:text="@string/email_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_field" />

    <TextView
        android:id="@+id/email_input_field"
        style="@style/TextEditStyle"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_3SS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_email"
        tools:text="davemorgan@yahoo.com" />

    <TextView
        android:id="@+id/text_view_start_date"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30dp"
        android:text="@string/start_date_text"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_field" />

    <TextView
        android:id="@+id/start_date_input_field"
        style="@style/TextEditStyle"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:drawableLeft="@drawable/start_date"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_3SS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_start_date"
        tools:text="2023-01-01" />

    <Button
        android:id="@+id/log_out_button"
        style="@style/ButtonStyleLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_24dp"
        android:layout_marginTop="@dimen/margin_top_40dp"
        android:layout_marginEnd="@dimen/margin_end_24dp"
        android:text="@string/text_button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date_input_field" />


</androidx.constraintlayout.widget.ConstraintLayout>